<resources>
    <string name="app_name">Firebase</string>
    <string name="next">next</string>
    <string name="fitness">\"time to fitness, this app will help you exercise. Now you may don\'t put a timer in your phone watch. \"</string>
    <string name="run">You now can watch , how long you was running</string>
    <string name="runn">The app will help you to become quick to get form</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="nextpage">NextPage</string>
    <string name="next_page">Next Page</string>
    <string name="test">TEST</string>
    <string name="hfhg">Test</string>
    <string name="pass_to_check_result">Pass to check result</string>
    <string name="check_result">check result</string>
    <string name="delete">Delete</string>
    <string name="_13_12_12_30_09_20">Время начала: %1s</string>
    <string name="_end_time">Время окончания: %1s</string>
    <string name="distance">Расстояние: %1s киллометров</string>
</resources>