<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.history.HistoryAdapter">

    <TextView
        android:id="@+id/TextOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/_13_12_12_30_09_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/TextTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TextOne"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:text="@string/_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/TextThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        app:layout_constraintTop_toBottomOf="@id/TextTwo"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/TextFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TextThree"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/TextFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TextFour"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/BtnDelete"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_height="wrap_content"
        app:layout_goneMarginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/TextFive"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>