<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:id="@+id/bottomSheet"
    app:layout_behavior = "com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_peekHeight = "60dp"
    app:behavior_hideable="false"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnBottomSheet"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/imageRec"
            android:src="@drawable/ic_rectangle"
            android:layout_width="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnBottomSheet"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/check_result"
        android:layout_marginStart="20dp"/>










    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        app:layout_constraintTop_toBottomOf="@id/BtnStop"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="200dp"
        android:autofillHints="Dark"
        android:layout_marginTop="14dp"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="40dp"
        android:layout_height="30dp"/>



    <Button
        android:id="@+id/BtnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_marginEnd="8dp"
     android:background="@drawable/listener_button"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/BtnStart"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/BtnStart"
        android:layout_width="wrap_content"
        android:text="@string/start"
        android:layout_height="wrap_content"
        android:background="@drawable/listener_button24"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>